ncc/testsuite/positive/indexers.n

using Nemerle.IO;

public class TestIndexers
{
  public this () { }

  private mutable x : int;
  
  public Item [index : int] : int
  {
    get
    {
      index * 2 + x
    }
    set
    {
      x = index * value
    }
  }

  public static Main () : void
  {
    def s = TestIndexers ();

    s [5] = 5;
    
    printf ("Hello world: %i!\n", s [20])
  }
}

/*
BEGIN-OUTPUT
Hello world: 65!
END-OUTPUT
*/
