ncc/testsuite/negative/properties1.n
class A {
  public Prop : string {
    get { ""  }
    private set { ignore (value) }
  }

  public this () { Prop = "" }
}

class B {
  OnlyGet : int {
    get { 1 }
  }

  
  public this () {
    def x = A();
    x.Prop = "#";        /// FIXME: should complain!    #362
    OnlyGet = 4;        // E: read-only
  }
}
